turtlebot3_ws/log/build_2024-12-01_16-22-13/detection_node/stderr.log
  File "/home/vboxuser/turtlebot3_ws/install/detection_node/lib/python3.10/site-packages/detection_node/app.py", line 19
    hands = mp_hands.Hands(
                          ^
SyntaxError: '(' was never closed

